# goelearn

./: Cargo.toml  docker-compose.yml  readme.MD
backend/: Cargo.toml
backend/src/: main.rs  rtc.rs  ws.rs
backend/src/api/: mod.rs
backend/src/api/assignment/: mod.rs  mutation.rs  object.rs  query.rs  repo.rs
backend/src/api/channel/: mod.rs  mutation.rs  object.rs  query.rs  repo.rs
backend/src/api/class/: mod.rs  mutation.rs  object.rs  query.rs  repo.rs  subscription.rs
backend/src/api/file/: handler.rs  mod.rs  mutation.rs  object.rs  query.rs  repo.rs
backend/src/api/message/: mod.rs  mutation.rs  object.rs  query.rs  repo.rs  subscription.rs
backend/src/api/user/: mod.rs  mutation.rs  object.rs  query.rs  repo.rs  rest.rs
backend/src/core/: auth.rs  errors.rs  errors2.rs  mod.rs  user_repo.rs
backend/src/core/repo/: assignment.rs  channel.rs  class.rs  file.rs  membership.rs  message.rs  mod.rs  user.rs
backend/src/graphql/mutation/: assignment.rs  channel.rs  class.rs  file.rs  message.rs  mod.rs  user.rs
backend/src/graphql/query/: class.rs  files.rs  guild.rs  message.rs  mod.rs  user.rs
backend/src/graphql/subscription/: message.rs  mod.rs
backend/src/mutation/: mod.rs  user.rs
backend/src/object/: assignment.rs  channel.rs  class.rs  file.rs  login.rs  message.rs  mod.rs  signup.rs  user.rs
backend/src/objects/: login.rs  mod.rs  signup.rs  user.rs
backend/src/query/: mod.rs
backend/src/rest/: file_handler.rs  mod.rs  user_handler.rs
backend/tests/: class.rs
backend/tests/common/: mod.rs
entity/: Cargo.toml
entity/src/: assignment.rs  assignment_file.rs  assignment_submission.rs  assignment_submission_feedback.rs  assignment_submission_file.rs  channel.rs  class.rs  class_blacklist.rs  file.rs  invite.rs  lib.rs  membership.rs  message.rs  password_reset_token.rs  prelude.rs  report.rs  sea_orm_active_enums.rs  user.rs
frontend/: apollo.config.js  codegen.ts  index.html  package-lock.json  package.json  post-install.ps1  vite.config.ts  volar.config.js
frontend/src/: class-meeting.ts  client.ts  main.ts  shared.ts  vite-env.d.ts  ws.ts
frontend/src/components/: ClassAssignmentForm.vue  ClassAssignments.vue  ClassChat.vue  ClassCreate.vue  ClassFiles.vue  ClassMeeting.vue  ClassSettings.vue  ErrorPopup.vue  HelloWorld.vue  UserClassSettings.vue
frontend/src/components/ClassAssignments/: AssignmentContent.vue  ClassAssignmentCreateForm.vue  ClassAssignmentForm.vue  ClassAssignmentUpdateForm.vue  ClassOwnerAssignemnts.vue  StudentAssignments.vue
frontend/src/components/ClassChat/: ChannelList.vue  ClassChat.vue  MemberList.vue  MessageList.vue  UsersList.vue
frontend/src/components/ClassSettings/: ClassChannelsSettings.vue  ClassInvitesSettings.vue  ClassMembersSettings.vue
frontend/src/components/admin/: AdminClassList.vue  AdminUserList.vue
frontend/src/gql/: gql.ts  graphql.ts
frontend/src/layouts/default/: AppBar.vue  Default.vue  View.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/styles/: settings.scss
frontend/src/views/: Admin.vue  ChangePassword.vue  Class.vue  ClassCreate.vue  ExploreClasses.vue  Home.vue  Invite.vue  Login.vue  Register.vue  Test.vue  UserAssignments.vue  UserClasses.vue  UserSettings.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230319_120845_create_relation.rs  m20230504_111801_create_tsvector.rs  m20231115_161824_create_admin.rs
