[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.6", features = [
  "decimal",
  "chrono",
  "dataloader",
] }
async-graphql-axum = "5.0.6"
axum = { version = "0.6.8", features = ["headers", "macros"] }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
migration = { path = "../migration" } # depends on your needs
entity = { path = "../entity" } # depends on your needs
lazy_static = "1.4.0"
chrono = { version = "0.4.24", features = ["clock"] }
jsonwebtoken = "8.3.0"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
