[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.6", features = [
  "decimal",
  "chrono",
  "dataloader",
  "tracing",
  "unblock",
] }
async-graphql-axum = "5.0.6"
axum = { version = "0.6.8", features = ["headers", "macros", "ws"] }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "postgres-array",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
migration = { path = "../migration" } # depends on your needs
entity = { path = "../entity" } # depends on your needs
lazy_static = "1.4.0"
chrono = { version = "0.4.24", features = ["clock"] }
jsonwebtoken = "8.3.0"
argon2-async = "0.2.0"
async-trait = "0.1.68"
base64 = "0.21.0"
# redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
futures-timer = "3.0.2"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
tower-service = "0.3.2"
tokio-util = { version = "0.7.8", features = ["compat"] }
aws-creds = { version = "0.34.1", features = ["http-credentials"] }
# rust-s3 = { version = "0.33.0" } https://github.com/durch/rust-s3/issues/337
rust-s3 = { git = "https://github.com/a-nickol/rust-s3.git" }
partialdebug = "0.2.0"
zip = "0.6.6"
futures-util = "0.3.28"
webrtc = "0.8.0"
deadpool-redis = "0.12.0"
paste = "1.0.14"

[dependencies.uuid]
version = "1.3.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
